# physics-based-ml-reaction-networks

./: .gitignore  README.md
learn_ip3/: README.md  cache.dvc  cache_derivs0.nb  cache_params0.nb
learn_ip3/analytic_forms/: no_nodes.nb  no_nodes_with_convert.nb
learn_ip3/package/: funcs_rxns_moms.m  funcs_rxns_moms.nb
learn_ip3/train/: README.md
learn_ip3/train/train/: README.md  moment_closure.nb  train.nb  trained.dvc
learn_ip3/train/training_data/: README.md  funcs_network_params.nb  funcs_network_rxns.nb  make_graph_params.nb  make_graph_rxns.nb  make_training_data.nb
learn_ip3/transformation_jacobian/: cache.dvc  cache_params0_no_trans.nb  jacobian.nb
learn_ip3r/: README.md  cache.dvc  cache_derivs0.nb  cache_params0.nb
learn_ip3r/package/: diffTVR.wl  funcs_rxns_moms.m  funcs_rxns_moms.nb
learn_ip3r/train/train/: train.nb  trained.dvc
stochastic_simulations/: README.md
stochastic_simulations/ml_training_data/: CMakeLists.txt  README.md  data_gillespie.dvc  data_tau_leaping.dvc
stochastic_simulations/ml_training_data/mathematica/: figures_appendix_trajs.nb  rewrite_data_into_singles.nb  rewrite_data_into_singles.py  viz_trajs.nb
stochastic_simulations/ml_training_data/src/: params.hpp  reactions.hpp  run_gillespie.cpp  run_job_gillespie.hpp  run_job_tau_leaping.hpp  run_tau_leaping.cpp
stochastic_simulations/no_IP3Rs/: README.md  no_ip3r_subunits.nb
stochastic_simulations/oscillation_range/: README.md  bifurcation_diagrams.m  bifurcation_diagrams.nb  funcs_oscillation_range.m  funcs_oscillation_range.nb  oscillation_range.nb
(+53 files in other folders)
